--- a/src/app/features/calls/components/calls-table/calls-table.component.css
+++ b/src/app/features/calls/components/calls-table/calls-table.component.css
@@ -4,6 +4,7 @@
   background: white;
   border-radius: var(--br-base);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: #01122F;
 }
 
 .calls-table {
