--- a/src/app/features/clients/components/client-filters/client-filters.component.html
+++ b/src/app/features/clients/components/client-filters/client-filters.component.html
@@ -12,6 +12,28 @@
         </button>
       </mat-form-field>
 
+      <!-- Selector de Zona -->
+      <mat-form-field appearance="outline">
+        <mat-label>Zona</mat-label>
+        <mat-select formControlName="zone">
+          <mat-option [value]="">Todas</mat-option>
+          <mat-option *ngFor="let zone of zones" [value]="zone">
+            Zona {{zone}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- Selector de Tipo de Cliente -->
+      <mat-form-field appearance="outline">
+        <mat-label>Tipo de Cliente</mat-label>
+        <mat-select formControlName="clientType">
+          <mat-option [value]="">Todos</mat-option>
+          <mat-option *ngFor="let type of clientTypes" [value]="type">
+            {{type}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
       <button mat-button color="primary" type="button" (click)="toggleAdvancedFilters()">
         <mat-icon>{{ showAdvancedFilters ? 'expand_less' : 'expand_more' }}</mat-icon>
         {{ showAdvancedFilters ? 'Menos filtros' : 'Más filtros' }}
@@ -44,34 +66,12 @@
       </mat-form-field>
 
 
-        <!-- Zona -->
-        <mat-form-field appearance="outline">
-          <mat-label>Zona</mat-label>
-          <mat-select formControlName="zone">
-            <mat-option [value]="">Todas</mat-option>
-            <mat-option *ngFor="let zone of zones" [value]="zone">
-              Zona {{zone}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-
         <!-- Tipo de Botellón -->
         <mat-form-field appearance="outline">
           <mat-label>Tipo de Botellón</mat-label>
           <mat-select formControlName="bottleType">
             <mat-option [value]="">Todos</mat-option>
             <mat-option *ngFor="let type of bottleTypes" [value]="type">
-              {{type}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <!-- Tipo de Cliente -->
-        <mat-form-field appearance="outline">
-          <mat-label>Tipo de Cliente</mat-label>
-          <mat-select formControlName="clientType">
-            <mat-option [value]="">Todos</mat-option>
-            <mat-option *ngFor="let type of clientTypes" [value]="type">
               {{type}}
             </mat-option>
           </mat-select>
